--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link href="bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<style>
 			.extraPadding {
 				padding: 10px;
@@ -10,6 +11,18 @@
 
 	<body>
 		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-4">
+					<table class="table">
+						<tbody>
+							<tr>
+								<td>Amount of groups</td><td><input class="groups" type="range" min="1" max="15" value="4" /></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="row">
@@ -65,42 +78,7 @@
 					</div>
 
 					<div class="row">
-						<div class="col-sm-12">
-							<table class="table table-striped">
-								<thead>
-									<th>Group 1</th>
-								</thead>
-
-								<tbody id="group1TableBody">
-								</tbody>
-							</table>
-
-							<table class="table table-striped">
-								<thead>
-									<th>Group 2</th>
-								</thead>
-
-								<tbody id="group2TableBody">
-								</tbody>
-							</table>
-
-							<table class="table table-striped">
-								<thead>
-									<th>Group 3</th>
-								</thead>
-
-								<tbody id="group3TableBody">
-								</tbody>
-							</table>
-
-							<table class="table table-striped">
-								<thead>
-									<th>Group 4</th>
-								</thead>
-
-								<tbody id="group4TableBody">
-								</tbody>
-							</table>
+						<div class="col-sm-12" id="allGroups">
 						</div>
 					</div>
 				</div>
@@ -109,8 +87,22 @@
 	</body>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script>
 		$(document).ready(function() {
+			var amountOfGroups = $(".groups").val();
+
+			for(var i = 1; i <= amountOfGroups; i ++) {
+				$("#allGroups").append('<table class="table table-striped"><thead><th>Group ' + i + '</th></thead><tbody id="group' + i + 'TableBody"></tbody></table>');
+			}
+
+			$(".groups").on("input", function() {
+				$("#allGroups").empty();
+				for(var i = 1; i <= $(".groups").val(); i ++) {
+					$("#allGroups").append('<table class="table table-striped"><thead><th>Group ' + i + '</th></thead><tbody id="group' + i + 'TableBody"></tbody></table>');
+				}
+			});
+
 			$("#randomize").on('click', function() {
 				$("#group1TableBody").empty();
 				$("#group2TableBody").empty();
@@ -118,28 +110,48 @@
 				$("#group4TableBody").empty();
 
 				var topSeedTextarea = $("#topTextArea").val().split(/\n/);
-				var highSeedTextarea = $("#highTextArea").val().split(/\n/);;
-				var lowSeedTextarea = $("#lowTextArea").val().split(/\n/);;
-				var unseededTextarea = $("#unseededTextArea").val().split(/\n/);;
+				var highSeedTextarea = $("#highTextArea").val().split(/\n/);
+				var lowSeedTextarea = $("#lowTextArea").val().split(/\n/);
+				var unseededTextarea = $("#unseededTextArea").val().split(/\n/);
+
+				if(topSeedTextarea.length !== $(".groups").val()) {
+					alert("The Topseed doesn't have enough players. Players required: " + $(".groups").val() + ", currently filled in: " + topSeedTextarea.length + ".");
+					return;
+				}
+
+				if(highSeedTextarea.length !== $(".groups").val()) {
+					alert("The Topseed doesn't have enough players. Players required: " + $(".groups").val() + ", currently filled in: " + highSeedTextarea.length + ".");
+					return;
+				}
+
+				if(lowSeedTextarea.length !== $(".groups").val()) {
+					alert("The Topseed doesn't have enough players. Players required: " + $(".groups").val() + ", currently filled in: " + lowSeedTextarea.length + ".");
+					return;
+				}
+
+				if(unseededTextarea.length !== $(".groups").val()) {
+					alert("The Topseed doesn't have enough players. Players required: " + $(".groups").val() + ", currently filled in: " + unseededTextarea.length + ".");
+					return;
+				}
 
 				shuffle(topSeedTextarea);
 				shuffle(highSeedTextarea);
 				shuffle(lowSeedTextarea);
 				shuffle(unseededTextarea);
 
-				for(var i = 1; i <= 4; i ++) {
+				for(var i = 1; i <= $(".groups").val(); i ++) {
 					$("#group" + i + "TableBody").append("<tr><td>" + topSeedTextarea[i - 1] + "</td></tr>");
 				}
 
-				for(var i = 1; i <= 4; i ++) {
+				for(var i = 1; i <= $(".groups").val(); i ++) {
 					$("#group" + i + "TableBody").append("<tr><td>" + highSeedTextarea[i - 1] + "</td></tr>");
 				}
 
-				for(var i = 1; i <= 4; i ++) {
+				for(var i = 1; i <= $(".groups").val(); i ++) {
 					$("#group" + i + "TableBody").append("<tr><td>" + lowSeedTextarea[i - 1] + "</td></tr>");
 				}
 
-				for(var i = 1; i <= 4; i ++) {
+				for(var i = 1; i <= $(".groups").val(); i ++) {
 					$("#group" + i + "TableBody").append("<tr><td>" + unseededTextarea[i - 1] + "</td></tr>");
 				}
 			});
