--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<table class="table">
 						<tbody>
 							<tr>
-								<td>Amount of groups</td><td><input class="groups" type="range" min="1" max="15" value="4" /></td>
+								<td>Amount of groups</td><td><input id="slider" class="groups" type="range" min="1" max="15" value="4" /> <center><span id="sliderLabel">4</span></center></td>
 							</tr>
 
 							<tr>
@@ -83,6 +83,8 @@
 				$("#allGroups").empty();
 				for(var i = 1; i <= $(".groups").val(); i ++)
 					$("#allGroups").append('<table class="table table-striped"><thead><th>Group ' + i + '</th></thead><tbody id="group' + i + 'TableBody"></tbody></table>');
+
+				$("#sliderLabel").text($(".groups").val());
 			});
 
 			$("#seeds").on('input', function() {
@@ -91,7 +93,6 @@
 				allSeeds = $("#seeds").val().split(/\n/);
 				for(var i = 0; i < allSeeds.length; i ++)
 					$("#seedArea").append('<div class="row"><div class="col-sm-12"><p><b>' + allSeeds[i] + '</b></p><textarea id="' + allSeeds[i].replace(/\s+/g, '').toLowerCase() + 'TextArea" rows="4" class="form-control"></textarea></div></div><div class="extraPadding"></div>');
-
 			});
 
 			$("#randomize").on('click', function() {
@@ -116,7 +117,7 @@
 					seedArray[nameOfSeed] = [];
 					var tempArr = $("#" + allSeeds[i].replace(/\s+/g, '').toLowerCase() + "TextArea").val().split(/\n/);
 					shuffle(tempArr);
-					
+
 					for(var value in tempArr)
 						seedArray[nameOfSeed].push(tempArr[value]);
 				}
