--- a/index.html
+++ b/index.html
@@ -4,15 +4,8 @@
 		<title>Seed randomizer</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css" />
-		<style>
-			.extraPadding {
-				padding: 10px;
-			}
-
-			.showThis {
-				display: none;
-			}
-		</style>
+		<link rel="stylesheet" href="style.css" />
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 	</head>
 
 	<body>
@@ -26,7 +19,7 @@
 							</tr>
 
 							<tr>
-								<td>Enter the seeds</td><td><textarea id="seeds" rows="4" class="form-control" style="resize: none;">Top seed&#13;High seed&#13;Low seed&#13;Unseeded</textarea></td>
+								<td>Enter the seeds</td><td><textarea id="seeds" rows="4" class="form-control textarea-theme" style="resize: none;">Top seed&#13;High seed&#13;Low seed&#13;Unseeded</textarea></td>
 							</tr>
 
 							<tr>
@@ -49,7 +42,7 @@
 
 					<div class="row">
 						<div class="col-sm-12">
-							<button id="randomize" type="button" class="btn btn-primary pull-right">Randomize</button>
+							<button id="randomize" type="button" class="btn btn-default pull-right">Randomize</button>
 						</div>
 					</div>
 				</div>
@@ -73,7 +66,7 @@
 		$(document).ready(function() {
 			var allSeeds = $("#seeds").val().split(/\n/);
 			for(var i = 0; i < allSeeds.length; i ++)
-				$("#seedArea").append('<div class="row"><div class="col-sm-12"><p><b>' + allSeeds[i] + '</b></p><textarea id="' + allSeeds[i].replace(/\s+/g, '').toLowerCase() + 'TextArea" rows="4" class="form-control"></textarea></div></div><div class="extraPadding"></div>');
+				$("#seedArea").append('<div class="row"><div class="col-sm-12"><p><b>' + allSeeds[i] + '</b></p><textarea id="' + allSeeds[i].replace(/\s+/g, '').toLowerCase() + 'TextArea" rows="4" class="form-control textarea-theme"></textarea></div></div><div class="extraPadding"></div>');
 
 			var amountOfGroups = $(".groups").val();
 			for(var i = 1; i <= amountOfGroups; i ++)
@@ -92,7 +85,7 @@
 
 				allSeeds = $("#seeds").val().split(/\n/);
 				for(var i = 0; i < allSeeds.length; i ++)
-					$("#seedArea").append('<div class="row"><div class="col-sm-12"><p><b>' + allSeeds[i] + '</b></p><textarea id="' + allSeeds[i].replace(/\s+/g, '').toLowerCase() + 'TextArea" rows="4" class="form-control"></textarea></div></div><div class="extraPadding"></div>');
+					$("#seedArea").append('<div class="row"><div class="col-sm-12"><p><b>' + allSeeds[i] + '</b></p><textarea id="' + allSeeds[i].replace(/\s+/g, '').toLowerCase() + 'TextArea" rows="4" class="form-control textarea-theme"></textarea></div></div><div class="extraPadding"></div>');
 			});
 
 			$("#randomize").on('click', function() {
